class_name VRRampPropertiesII
extends Control


@onready var theta_2_label : Label = $VBoxContainer/R2ThetaLabel
@onready var beta_2_label : Label = $VBoxContainer/R2BetaLabel
@onready var mach_number_label : Label = $VBoxContainer/R2MachLabel
@onready var temperature_label : Label = $VBoxContainer/R2TempLabel
@onready var pressure_label : Label = $VBoxContainer/R2PresLabel
@onready var density_label : Label = $VBoxContainer/R2DensLabel
@onready var stag_temp_label : Label = $VBoxContainer/R2StagTempLabel
@onready var stag_press_label : Label = $VBoxContainer/R2StagPresLabel
@onready var flow_velocity_label : Label = $VBoxContainer/R2FlowVelLabel
